--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Whack-a-Bald!</h1>
+    <h1 style = "font-family:verdana">Whack-a-Bald!</h1>
     <span>score:</span> <span class="score">0</span>
     <span>hp:</span><span class="hp">0</span>
     <button onClick="startGame()">Start!</button>
